--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Source code for http://www.windowsphone.com/en-gb/store/app/learn-on-the-go/aca60941-2945-49e7-afd2-adbe5625df12
+
 Description:
 Learn On The Go enables you to watch the lecture videos and read the PDF lecture notes of the Coursera courses you're enrolled in. This is not an official Coursera app.
 
