--- a/README
+++ b/README
@@ -1,13 +1,15 @@
+Source code for http://www.windowsphone.com/en-gb/store/app/uk-trains/ef62d461-861c-4a9f-9198-8768532cc6aa
+
 Description:
 UK Trains brings you train departure information for all UK national rail stations.
+
+History:
+2.0 Fix crash when app resumes into a station page after tombstoning
+    Get walk directions to station
+1.0 Initial version
 
 Keywords:
 Train
 Rail
 Schedule
 Departures
-
-TODO:
-* Allow to search for a station in addition to showing the nearest ones
-* Filter by destination
-* Auto Refresh
