--- a/README
+++ b/README
@@ -4,8 +4,8 @@ Description:
 UK Trains brings you train departure information for all UK national rail stations.
 
 History:
-2.0 Fix crash when app resumes into a station page after tombstoning
-    Get walk directions to station
+1.1 Fix crash when app resumes into a station page after tombstoning
+    Get walk directions to station (WP8 version only)
 1.0 Initial version
 
 Keywords:
