--- a/README
+++ b/README
@@ -6,6 +6,7 @@ UK Trains brings you train departure information for all UK national rail statio
 History:
 1.1 Fix crash when app resumes into a station page after tombstoning
     Get walk directions to station (WP8 version only)
+	Allow to pin stations to start screen
 1.0 Initial version
 
 Keywords:
