--- a/README
+++ b/README
@@ -7,6 +7,7 @@ History:
 1.1 Fix crash when app resumes into a station page after tombstoning
     Get walk directions to station (WP8 version only)
 	Allow to pin stations to start screen
+	Allow to filter by destination
 1.0 Initial version
 
 Keywords:
