Ad map id & token

--- a/README
+++ b/README
@@ -15,3 +15,9 @@ Train
 Rail
 Schedule
 Departures
+
+Map service ApplicationID:
+ef62d461-861c-4a9f-9198-8768532cc6aa
+
+Map service AuthenticationToken:
+r4y7eZta5Pa32rpsho9CFA
