--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-Source code for http://www.windowsphone.com/en-gb/store/app/uk-trains/ef62d461-861c-4a9f-9198-8768532cc6aa
+Store URL: http://www.windowsphone.com/en-gb/store/app/uk-trains/ef62d461-861c-4a9f-9198-8768532cc6aa
+Store URL for beta version: http://www.windowsphone.com/en-gb/store/app/uk-trains/ef721560-99cc-4b23-8b71-a274de88170a
 
 Description:
 UK Trains brings you train departure information for all UK national rail stations.
