--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Description:
 UK Trains brings you train departure information for all UK national rail stations.
 
 New in 1.3:
-* 
+* Fixed some reported crashes
 
 New in 1.2:
 * Auto refresh departures every 60 seconds
