--- a/README
+++ b/README
@@ -3,6 +3,9 @@ Store URL: http://www.windowsphone.com/en-gb/store/app/uk-trains/ef62d461-861c-4
 Description:
 UK Trains brings you train departure information for all UK national rail stations.
 
+New in 1.4:
+* Improved usability of all stations list
+
 New in 1.3:
 * Fixed some reported crashes
 
