--- a/README
+++ b/README
@@ -7,6 +7,7 @@ New in 1.4:
 * Allow to press enter to go to station when filtering the list of all stations
 * Highlight delayed and cancelled trains
 * More efficient use of space in departures list
+* Fix stations with big names not displaying correctly
 
 New in 1.3:
 * Fixed some reported crashes
