--- a/README
+++ b/README
@@ -8,6 +8,7 @@ New in 1.4:
 * Highlight delayed and cancelled trains
 * More efficient use of space in departures list
 * Fix stations with big names not displaying correctly
+* Fix crash
 
 New in 1.3:
 * Fixed some reported crashes
