--- a/README
+++ b/README
@@ -8,8 +8,9 @@ New in 1.4:
 * Highlight delayed and cancelled trains
 * More efficient use of space in departures list
 * Allow to press enter to go to station when filtering the list of all stations
-* Fix stations with big names not displaying correctly
-* Fix crash
+* Fix stations with long names not displaying correctly
+* Fix platforms with long names not displaying correctly
+* Fixed some reported crashes
 
 New in 1.3:
 * Fixed some reported crashes
