--- a/README
+++ b/README
@@ -3,6 +3,11 @@ Store URL: http://www.windowsphone.com/en-gb/store/app/uk-trains/ef62d461-861c-4
 Description:
 UK Trains brings you train departure and arrival information for all UK national rail stations.
 
+New in 1.6:
+* Refresh departures and arrivals in parallel
+* Show last refresh time
+* Fixed some reported crashes
+
 New in 1.5:
 * Added live progress information
 * Fixed crash when going to the settings page
@@ -16,6 +21,7 @@ New in 1.4:
 * Fix stations with long names not displaying correctly
 * Fix platforms with long names not displaying correctly
 * Fixed some reported crashes
+* Removed ads
 
 New in 1.3:
 * Fixed some reported crashes
