--- a/README
+++ b/README
@@ -5,8 +5,8 @@ Learn On The Go enables you to watch the lecture videos and read the PDF lecture
 This is not an official Coursera app.
 
 New in 1.5:
-* Update to use the new Coursera login API
-* Improved error handling
+* Update to the new Coursera login API
+* Improve error reporting
 
 New in 1.4:
 * Fix crashes on some courses
