--- a/README
+++ b/README
@@ -3,6 +3,9 @@ Store URL: http://www.windowsphone.com/s?appid=ef62d461-861c-4a9f-9198-8768532cc
 Description:
 UK Trains brings you train departure and arrival information for all UK national rail stations.
 
+New in 1.9:
+* Fixed some reported crashes
+
 New in 1.8:
 * Only load arrivals when swiping to the arrivals list
 * Fixed incorrect display of time on trains delayed more than 90 minutes
